<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_recipe_book"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></androidx.fragment.app.FragmentContainerView>
</androidx.constraintlayout.widget.ConstraintLayout>