<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_meal_book"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mealplan.MealBookFragment">

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/meal_book" />

</FrameLayout>