<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_ingredient_storage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mealplan.MealBookFragment">

    <TextView
        android:id="@+id/ingredient_storage_title"
...
